WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85603
[EFL][DRT] Input Attribute Placeholder RefTests failing
https://bugs.webkit.org/show_bug.cgi?id=85603
Summary
[EFL][DRT] Input Attribute Placeholder RefTests failing
Dominik Röttsches (drott)
Reported
2012-05-04 04:32:05 PDT
EFL doesn't render the placeholder attribute as gray, needs more investigation. These tests are failing: fast/forms/placeholder-with-positioned-element.html fast/forms/isindex-placeholder.html fast/forms/textarea-placeholder.html fast/forms/input-placeholder.html
Attachments
Less style overriding.
(272.43 KB, patch)
2012-05-09 07:20 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Updated patch
(280.94 KB, patch)
2012-05-10 02:36 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Re-upped, ChangeLogs updated
(280.88 KB, patch)
2012-05-11 05:40 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Patch
(2.81 KB, patch)
2012-05-11 07:25 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2012-05-04 04:37:58 PDT
Two more: fast/forms/input-placeholder-text-indent.html fast/forms/textarea-placeholder-wrapping.html
Dominik Röttsches (drott)
Comment 2
2012-05-09 05:22:12 PDT
***
Bug 85497
has been marked as a duplicate of this bug. ***
Dominik Röttsches (drott)
Comment 3
2012-05-09 07:20:02 PDT
Created
attachment 140940
[details]
Less style overriding.
Dominik Röttsches (drott)
Comment 4
2012-05-09 09:22:03 PDT
***
Bug 85953
has been marked as a duplicate of this bug. ***
Dominik Röttsches (drott)
Comment 5
2012-05-09 11:31:49 PDT
Comment on
attachment 140940
[details]
Less style overriding. Removing cq? because I got the test case modification for fast/forms/textarea-placeholder-wrapping.html landed, so I need to update the test_expectations modification in this patch. No code change.
Ryuan Choi
Comment 6
2012-05-09 16:06:10 PDT
Looks good to me.
Raphael Kubo da Costa (:rakuco)
Comment 7
2012-05-09 18:39:05 PDT
This will make Edje theming less flexible, but the current behavior does seem wrong. You can get rid of these foreground/backgroundColor variables now, as they're only used in those context. You should also remove those entries from the theme, as they won't be used anymore. Are those setWhiteSpace calls correct, BTW?
Ryuan Choi
Comment 8
2012-05-09 18:48:14 PDT
***
Bug 85123
has been marked as a duplicate of this bug. ***
Kangil Han
Comment 9
2012-05-09 18:55:53 PDT
dominik : plus 'fast/forms/cursor-at-editable-content-boundary.html'
Gyuyoung Kim
Comment 10
2012-05-09 21:52:08 PDT
Comment on
attachment 140940
[details]
Less style overriding. Looks fine.
Dominik Röttsches (drott)
Comment 11
2012-05-10 02:36:23 PDT
Created
attachment 141116
[details]
Updated patch 4 baselines added due to PRE change, all placeholder cases unskipped, cursor-at-editable-content-boundary unskipped, RenderThemeEFL and default theme cleaned of color classes.
Gyuyoung Kim
Comment 12
2012-05-10 03:32:05 PDT
Comment on
attachment 141116
[details]
Updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141116&action=review
As kubo said, it looks foreground/background variables don't need to be kept.
> Source/WebCore/platform/efl/RenderThemeEfl.cpp:-992 > - style->setWhiteSpace(PRE);
Why do you remove setWhiteSpace() only here ?
Dominik Röttsches (drott)
Comment 13
2012-05-10 03:43:13 PDT
(In reply to
comment #12
)
> (From update of
attachment 141116
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=141116&action=review
> > As kubo said, it looks foreground/background variables don't need to be kept.
Yes, that's why I removed them for all cases except for selection foreground and background. These need to stay. Or did you find any leftovers?
> > Source/WebCore/platform/efl/RenderThemeEfl.cpp:-992 > > - style->setWhiteSpace(PRE); > > Why do you remove setWhiteSpace() only here ?
Because I don't know any issues/failing tests that would conflict with leaving this code there. So, in order to keep my patch minimal I am not touching these in this bug. If we come across failures caused by these PRE overrides, we can reconsider.
Gyuyoung Kim
Comment 14
2012-05-11 02:45:38 PDT
Comment on
attachment 141116
[details]
Updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141116&action=review
>>> Source/WebCore/platform/efl/RenderThemeEfl.cpp:-992 >>> - style->setWhiteSpace(PRE); >> >> Why do you remove setWhiteSpace() only here ? > > Because I don't know any issues/failing tests that would conflict with leaving this code there. So, in order to keep my patch minimal I am not touching these in this bug. If we come across failures caused by these PRE overrides, we can reconsider.
If you don't know any issues when setWhiteSpace(PRE) isn't removed, I think we need to keep it in order to be consistent with other function.
Dominik Röttsches (drott)
Comment 15
2012-05-11 03:18:37 PDT
(In reply to
comment #14
)
> If you don't know any issues when setWhiteSpace(PRE) isn't removed, I think we need to keep it in order to be consistent with other function.
It does in fact solve cases that were previously failing when PRE override is removed for input type text, textareas and search field. My point was that right now I don't know about cases where it helps to remove such a PRE override for Buttons and MenuLists. So, let's keep the patch small and remove it there if needed later. Since the patch as it is now fixes a number of cases and doesn't cause new issues, I think it's ready for landing. As mentioned - if PRE issues come up with buttons or menus, let's handle them separately.
Gyuyoung Kim
Comment 16
2012-05-11 03:37:26 PDT
(In reply to
comment #15
)
> (In reply to
comment #14
) > > If you don't know any issues when setWhiteSpace(PRE) isn't removed, I think we need to keep it in order to be consistent with other function. > > It does in fact solve cases that were previously failing when PRE override is removed for input type text, textareas and search field. My point was that right now I don't know about cases where it helps to remove such a PRE override for Buttons and MenuLists. So, let's keep the patch small and remove it there if needed later. > > Since the patch as it is now fixes a number of cases and doesn't cause new issues, I think it's ready for landing. As mentioned - if PRE issues come up with buttons or menus, let's handle them separately.
I'm not sure whether this removing is correct. However, this patch lets failing test cases pass. rs+ on my side informally.
WebKit Review Bot
Comment 17
2012-05-11 04:47:41 PDT
Comment on
attachment 141116
[details]
Updated patch Rejecting
attachment 141116
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: mium/third_party/v8-i18n --revision 32 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 47>At revision 32. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Total errors found: 0 in 0 files Full output:
http://queues.webkit.org/results/12678025
Dominik Röttsches (drott)
Comment 18
2012-05-11 04:55:54 PDT
(In reply to
comment #17
)
> (From update of
attachment 141116
[details]
) > Rejecting
attachment 141116
[details]
from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2
I am pretty certain this is a cq flaw wen committing to SVN: "RA layer request failed: Server sent unexpected return value (500 Internal Server Error) in response to CHECKOUT request for '/repository/webkit/!svn/ver/116748/trunk/LayoutTests/platform/efl/fast/css/text-transform-select-expected.txt' at /usr/lib/git-core/git-svn line 572" Can we try again?
Dominik Röttsches (drott)
Comment 19
2012-05-11 05:40:40 PDT
Created
attachment 141386
[details]
Re-upped, ChangeLogs updated
WebKit Review Bot
Comment 20
2012-05-11 06:39:03 PDT
Comment on
attachment 141386
[details]
Re-upped, ChangeLogs updated Clearing flags on attachment: 141386 Committed
r116761
: <
http://trac.webkit.org/changeset/116761
>
WebKit Review Bot
Comment 21
2012-05-11 06:39:11 PDT
All reviewed patches have been landed. Closing bug.
Dominik Röttsches (drott)
Comment 22
2012-05-11 07:25:33 PDT
Reopening to attach new patch.
Dominik Röttsches (drott)
Comment 23
2012-05-11 07:25:40 PDT
Created
attachment 141414
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 24
2012-05-11 07:27:43 PDT
Comment on
attachment 141414
[details]
Patch cq+'ing to fix the EFL build ASAP; in the future, please mention in the ChangeLog what revision caused the build to break, and send the patch in a new bug.
WebKit Review Bot
Comment 25
2012-05-11 08:51:07 PDT
Comment on
attachment 141414
[details]
Patch Clearing flags on attachment: 141414 Committed
r116774
: <
http://trac.webkit.org/changeset/116774
>
WebKit Review Bot
Comment 26
2012-05-11 08:51:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug