Source/WebCore/platform/efl/RenderThemeEfl.cpp
@@ -500,10 +500,6 @@ void RenderThemeEfl::createEdje()
             CONNECT("selection/inactive",
                     renderThemeEflColorClassSelectionInactive);
             CONNECT("focus_ring", renderThemeEflColorClassFocusRing);
-            CONNECT("button/text", renderThemeEflColorClassButtonText);
-            CONNECT("combo/text", renderThemeEflColorClassComboText);
-            CONNECT("entry/text", renderThemeEflColorClassEntryText);
-            CONNECT("search/text", renderThemeEflColorClassSearchText);
 #undef CONNECT
         }
     }
@@ -533,22 +529,6 @@ void RenderThemeEfl::applyEdjeColors()
         // this is ugly, but no other way to do it unless we change
         // it to use page themes as much as possible.
         RenderTheme::setCustomFocusRingColor(m_focusRingColor);
-    }
-    if (COLOR_GET("button/text")) {
-        m_buttonTextForegroundColor = Color(fr, fg, fb, fa);
-        m_buttonTextBackgroundColor = Color(br, bg, bb, ba);
-    }
-    if (COLOR_GET("combo/text")) {
-        m_comboTextForegroundColor = Color(fr, fg, fb, fa);
-        m_comboTextBackgroundColor = Color(br, bg, bb, ba);
-    }
-    if (COLOR_GET("entry/text")) {
-        m_entryTextForegroundColor = Color(fr, fg, fb, fa);
-        m_entryTextBackgroundColor = Color(br, bg, bb, ba);
-    }
-    if (COLOR_GET("search/text")) {
-        m_searchTextForegroundColor = Color(fr, fg, fb, fa);
-        m_searchTextBackgroundColor = Color(br, bg, bb, ba);
     }
 #undef COLOR_GET
     platformColorsDidChange();
@@ -713,14 +693,6 @@ RenderThemeEfl::RenderThemeEfl(Page* page)
     , m_inactiveSelectionBackgroundColor(0, 0, 128)
     , m_inactiveSelectionForegroundColor(200, 200, 200)
     , m_focusRingColor(32, 32, 224, 224)
-    , m_buttonTextBackgroundColor(0, 0, 0, 0)
-    , m_buttonTextForegroundColor(Color::black)
-    , m_comboTextBackgroundColor(0, 0, 0, 0)
-    , m_comboTextForegroundColor(Color::black)
-    , m_entryTextBackgroundColor(0, 0, 0, 0)
-    , m_entryTextForegroundColor(Color::black)
-    , m_searchTextBackgroundColor(0, 0, 0, 0)
-    , m_searchTextForegroundColor(Color::black)
     , m_sliderThumbColor(Color::darkGray)
 #if ENABLE(VIDEO)
     , m_mediaPanelColor(220, 220, 195) // light tannish color.
@@ -765,34 +737,6 @@ void RenderThemeEfl::setFocusRingColor(int r, int g, int b, int a)
     // this is ugly, but no other way to do it unless we change
     // it to use page themes as much as possible.
     RenderTheme::setCustomFocusRingColor(m_focusRingColor);
-    platformColorsDidChange();
-}
-
-void RenderThemeEfl::setButtonTextColor(int foreR, int foreG, int foreB, int foreA, int backR, int backG, int backB, int backA)
-{
-    m_buttonTextForegroundColor = Color(foreR, foreG, foreB, foreA);
-    m_buttonTextBackgroundColor = Color(backR, backG, backB, backA);
-    platformColorsDidChange();
-}
-
-void RenderThemeEfl::setComboTextColor(int foreR, int foreG, int foreB, int foreA, int backR, int backG, int backB, int backA)
-{
-    m_comboTextForegroundColor = Color(foreR, foreG, foreB, foreA);
-    m_comboTextBackgroundColor = Color(backR, backG, backB, backA);
-    platformColorsDidChange();
-}
-
-void RenderThemeEfl::setEntryTextColor(int foreR, int foreG, int foreB, int foreA, int backR, int backG, int backB, int backA)
-{
-    m_entryTextForegroundColor = Color(foreR, foreG, foreB, foreA);
-    m_entryTextBackgroundColor = Color(backR, backG, backB, backA);
-    platformColorsDidChange();
-}
-
-void RenderThemeEfl::setSearchTextColor(int foreR, int foreG, int foreB, int foreA, int backR, int backG, int backB, int backA)
-{
-    m_searchTextForegroundColor = Color(foreR, foreG, foreB, foreA);
-    m_searchTextBackgroundColor = Color(backR, backG, backB, backA);
     platformColorsDidChange();
 }
 
@@ -943,8 +887,6 @@ void RenderThemeEfl::adjustButtonStyle(StyleResolver* styleResolver, RenderStyle
         style->resetBorder();
         style->setWhiteSpace(PRE);
         style->setHeight(Length(Auto));
-        style->setColor(m_buttonTextForegroundColor);
-        style->setBackgroundColor(m_buttonTextBackgroundColor);
     }
 }
 
@@ -962,8 +904,6 @@ void RenderThemeEfl::adjustMenuListStyle(StyleResolver* styleResolver, RenderSty
     adjustSizeConstraints(style, ComboBox);
     style->resetBorder();
     style->setWhiteSpace(PRE);
-    style->setColor(m_comboTextForegroundColor);
-    style->setBackgroundColor(m_comboTextBackgroundColor);
 }
 
 bool RenderThemeEfl::paintMenuList(RenderObject* object, const PaintInfo& info, const IntRect& rect)
@@ -989,9 +929,6 @@ void RenderThemeEfl::adjustTextFieldStyle(StyleResolver* styleResolver, RenderSt
     }
     adjustSizeConstraints(style, TextField);
     style->resetBorder();
-    style->setWhiteSpace(PRE);
-    style->setColor(m_entryTextForegroundColor);
-    style->setBackgroundColor(m_entryTextBackgroundColor);
 }
 
 bool RenderThemeEfl::paintTextField(RenderObject* object, const PaintInfo& info, const IntRect& rect)
@@ -1082,8 +1019,6 @@ void RenderThemeEfl::adjustSearchFieldStyle(StyleResolver* styleResolver, Render
     adjustSizeConstraints(style, SearchField);
     style->resetBorder();
     style->setWhiteSpace(PRE);
-    style->setColor(m_searchTextForegroundColor);
-    style->setBackgroundColor(m_searchTextBackgroundColor);
 }
 
 bool RenderThemeEfl::paintSearchField(RenderObject* object, const PaintInfo& info, const IntRect& rect)
